[package]
name = "seismic-response"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.69"
tsify = "0.4.5"
wasm-bindgen = "0.2.92"
serde = { version = "1.0.202", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.0"

[[bench]]
name = "response1"
harness = false
