[package]
name = "seismic-response"
authors = ["azishio"]
version = "0.1.0"
edition = "2021"

description = "Seismic response analysis of a single particle system is performed using Newmark's beta method."
license = "MIT OR Apache-2.0"

repository = "https://github.com/azishio/seismic-response-rs"
homepage = "https://crates.io/crates/seismic-response"
documentation = "https://docs.rs/seismic-response"

keywords = ["seismic", "analysis", "newmark", "beta"]
categories = ["mathematics", "science", "wasm"]


[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
js-sys = "0.3.69"
tsify = "0.4.5"
wasm-bindgen = "0.2.92"
serde = { version = "1.0.202", features = ["derive"] }

[dev-dependencies]
close-to = "0.2.0"
criterion = "0.5.1"
csv = "1.3.0"

[[bench]]
name = "response1"
harness = false
